@@ -13,8 +13,6 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
-
 package com.jayway.restassured.internal
 
 import com.jayway.restassured.config.RestAssuredConfig
